--- a/src/VCCTV.css
+++ b/src/VCCTV.css
@@ -49,4 +49,10 @@
   margin-bottom: 10px;
   color: #222222;
   line-height: 26px;
+  text-overflow: ellipsis;
+  white-space: normal;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 5;
 }
